glf90w_constants.f90


    integer(c_int), bind(C, name="glf90w_mouse_button_1"),                 public :: GLFW_MOUSE_BUTTON_1
    integer(c_int), bind(C, name="glf90w_mouse_button_2"),                 public :: GLFW_MOUSE_BUTTON_2
    integer(c_int), bind(C, name="glf90w_mouse_button_3"),                 public :: GLFW_MOUSE_BUTTON_3
    integer(c_int), bind(C, name="glf90w_mouse_button_4"),                 public :: GLFW_MOUSE_BUTTON_4
    integer(c_int), bind(C, name="glf90w_mouse_button_5"),                 public :: GLFW_MOUSE_BUTTON_5
    integer(c_int), bind(C, name="glf90w_mouse_button_6"),                 public :: GLFW_MOUSE_BUTTON_6
    integer(c_int), bind(C, name="glf90w_mouse_button_7"),                 public :: GLFW_MOUSE_BUTTON_7
    integer(c_int), bind(C, name="glf90w_mouse_button_8"),                 public :: GLFW_MOUSE_BUTTON_8
    integer(c_int), bind(C, name="glf90w_mouse_button_last"),              public :: GLFW_MOUSE_BUTTON_LAST
    integer(c_int), bind(C, name="glf90w_mouse_button_left"),              public :: GLFW_MOUSE_BUTTON_LEFT
    integer(c_int), bind(C, name="glf90w_mouse_button_right"),             public :: GLFW_MOUSE_BUTTON_RIGHT
    integer(c_int), bind(C, name="glf90w_mouse_button_middle"),            public :: GLFW_MOUSE_BUTTON_MIDDLE
    integer(c_int), bind(C, name="glf90w_joystick_1"),                     public :: GLFW_JOYSTICK_1
    integer(c_int), bind(C, name="glf90w_joystick_2"),                     public :: GLFW_JOYSTICK_2
    integer(c_int), bind(C, name="glf90w_joystick_3"),                     public :: GLFW_JOYSTICK_3
    integer(c_int), bind(C, name="glf90w_joystick_4"),                     public :: GLFW_JOYSTICK_4
    integer(c_int), bind(C, name="glf90w_joystick_5"),                     public :: GLFW_JOYSTICK_5
    integer(c_int), bind(C, name="glf90w_joystick_6"),                     public :: GLFW_JOYSTICK_6
    integer(c_int), bind(C, name="glf90w_joystick_7"),                     public :: GLFW_JOYSTICK_7
    integer(c_int), bind(C, name="glf90w_joystick_8"),                     public :: GLFW_JOYSTICK_8
    integer(c_int), bind(C, name="glf90w_joystick_9"),                     public :: GLFW_JOYSTICK_9
    integer(c_int), bind(C, name="glf90w_joystick_10"),                    public :: GLFW_JOYSTICK_10
    integer(c_int), bind(C, name="glf90w_joystick_11"),                    public :: GLFW_JOYSTICK_11
    integer(c_int), bind(C, name="glf90w_joystick_12"),                    public :: GLFW_JOYSTICK_12
    integer(c_int), bind(C, name="glf90w_joystick_13"),                    public :: GLFW_JOYSTICK_13
    integer(c_int), bind(C, name="glf90w_joystick_14"),                    public :: GLFW_JOYSTICK_14
    integer(c_int), bind(C, name="glf90w_joystick_15"),                    public :: GLFW_JOYSTICK_15
    integer(c_int), bind(C, name="glf90w_joystick_16"),                    public :: GLFW_JOYSTICK_16
    integer(c_int), bind(C, name="glf90w_joystick_last"),                  public :: GLFW_JOYSTICK_LAST
    integer(c_int), bind(C, name="glf90w_gamepad_button_a"),               public :: GLFW_GAMEPAD_BUTTON_A
    integer(c_int), bind(C, name="glf90w_gamepad_button_b"),               public :: GLFW_GAMEPAD_BUTTON_B
    integer(c_int), bind(C, name="glf90w_gamepad_button_x"),               public :: GLFW_GAMEPAD_BUTTON_X
    integer(c_int), bind(C, name="glf90w_gamepad_button_y"),               public :: GLFW_GAMEPAD_BUTTON_Y
    integer(c_int), bind(C, name="glf90w_gamepad_button_left_bumper"),     public :: GLFW_GAMEPAD_BUTTON_LEFT_BUMPER
    integer(c_int), bind(C, name="glf90w_gamepad_button_right_bumper"),    public :: GLFW_GAMEPAD_BUTTON_RIGHT_BUMPER
    integer(c_int), bind(C, name="glf90w_gamepad_button_back"),            public :: GLFW_GAMEPAD_BUTTON_BACK
    integer(c_int), bind(C, name="glf90w_gamepad_button_start"),           public :: GLFW_GAMEPAD_BUTTON_START
    integer(c_int), bind(C, name="glf90w_gamepad_button_guide"),           public :: GLFW_GAMEPAD_BUTTON_GUIDE
    integer(c_int), bind(C, name="glf90w_gamepad_button_left_thumb"),      public :: GLFW_GAMEPAD_BUTTON_LEFT_THUMB
    integer(c_int), bind(C, name="glf90w_gamepad_button_right_thumb"),     public :: GLFW_GAMEPAD_BUTTON_RIGHT_THUMB
    integer(c_int), bind(C, name="glf90w_gamepad_button_dpad_up"),         public :: GLFW_GAMEPAD_BUTTON_DPAD_UP
    integer(c_int), bind(C, name="glf90w_gamepad_button_dpad_right"),      public :: GLFW_GAMEPAD_BUTTON_DPAD_RIGHT
    integer(c_int), bind(C, name="glf90w_gamepad_button_dpad_down"),       public :: GLFW_GAMEPAD_BUTTON_DPAD_DOWN
    integer(c_int), bind(C, name="glf90w_gamepad_button_dpad_left"),       public :: GLFW_GAMEPAD_BUTTON_DPAD_LEFT
    integer(c_int), bind(C, name="glf90w_gamepad_button_last"),            public :: GLFW_GAMEPAD_BUTTON_LAST

    integer(c_int), bind(C, name="glf90w_gamepad_button_cross"),           public :: GLFW_GAMEPAD_BUTTON_CROSS
    integer(c_int), bind(C, name="glf90w_gamepad_button_circle"),          public :: GLFW_GAMEPAD_BUTTON_CIRCLE
    integer(c_int), bind(C, name="glf90w_gamepad_button_square"),          public :: GLFW_GAMEPAD_BUTTON_SQUARE
    integer(c_int), bind(C, name="glf90w_gamepad_button_triangle"),        public :: GLFW_GAMEPAD_BUTTON_TRIANGLE
    integer(c_int), bind(C, name="glf90w_gamepad_axis_left_x"),            public :: GLFW_GAMEPAD_AXIS_LEFT_X
    integer(c_int), bind(C, name="glf90w_gamepad_axis_left_y"),            public :: GLFW_GAMEPAD_AXIS_LEFT_Y
    integer(c_int), bind(C, name="glf90w_gamepad_axis_right_x"),           public :: GLFW_GAMEPAD_AXIS_RIGHT_X
    integer(c_int), bind(C, name="glf90w_gamepad_axis_right_y"),           public :: GLFW_GAMEPAD_AXIS_RIGHT_Y
    integer(c_int), bind(C, name="glf90w_gamepad_axis_left_trigger"),      public :: GLFW_GAMEPAD_AXIS_LEFT_TRIGGER
    integer(c_int), bind(C, name="glf90w_gamepad_axis_right_trigger"),     public :: GLFW_GAMEPAD_AXIS_RIGHT_TRIGGER
    integer(c_int), bind(C, name="glf90w_gamepad_axis_last"),              public :: GLFW_GAMEPAD_AXIS_LAST
    integer(c_int), bind(C, name="glf90w_no_error"),                       public :: GLFW_NO_ERROR
    integer(c_int), bind(C, name="glf90w_not_initialized"),                public :: GLFW_NOT_INITIALIZED
    integer(c_int), bind(C, name="glf90w_no_current_context"),             public :: GLFW_NO_CURRENT_CONTEXT
    integer(c_int), bind(C, name="glf90w_invalid_enum"),                   public :: GLFW_INVALID_ENUM
    integer(c_int), bind(C, name="glf90w_invalid_value"),                  public :: GLFW_INVALID_VALUE
    integer(c_int), bind(C, name="glf90w_out_of_memory"),                  public :: GLFW_OUT_OF_MEMORY
    integer(c_int), bind(C, name="glf90w_api_unavailable"),                public :: GLFW_API_UNAVAILABLE
    integer(c_int), bind(C, name="glf90w_version_unavailable"),            public :: GLFW_VERSION_UNAVAILABLE
    integer(c_int), bind(C, name="glf90w_platform_error"),                 public :: GLFW_PLATFORM_ERROR
    integer(c_int), bind(C, name="glf90w_format_unavailable"),             public :: GLFW_FORMAT_UNAVAILABLE
    integer(c_int), bind(C, name="glf90w_no_window_context"),              public :: GLFW_NO_WINDOW_CONTEXT
    integer(c_int), bind(C, name="glf90w_cursor_unavailable"),             public :: GLFW_CURSOR_UNAVAILABLE
    integer(c_int), bind(C, name="glf90w_feature_unavailable"),            public :: GLFW_FEATURE_UNAVAILABLE
    integer(c_int), bind(C, name="glf90w_feature_unimplemented"),          public :: GLFW_FEATURE_UNIMPLEMENTED
    integer(c_int), bind(C, name="glf90w_platform_unavailable"),           public :: GLFW_PLATFORM_UNAVAILABLE
    integer(c_int), bind(C, name="glf90w_focused"),                        public :: GLFW_FOCUSED
    integer(c_int), bind(C, name="glf90w_iconified"),                      public :: GLFW_ICONIFIED
    integer(c_int), bind(C, name="glf90w_resizable"),                      public :: GLFW_RESIZABLE
    integer(c_int), bind(C, name="glf90w_visible"),                        public :: GLFW_VISIBLE
    integer(c_int), bind(C, name="glf90w_decorated"),                      public :: GLFW_DECORATED
    integer(c_int), bind(C, name="glf90w_auto_iconify"),                   public :: GLFW_AUTO_ICONIFY
    integer(c_int), bind(C, name="glf90w_floating"),                       public :: GLFW_FLOATING
    integer(c_int), bind(C, name="glf90w_maximized"),                      public :: GLFW_MAXIMIZED
    integer(c_int), bind(C, name="glf90w_center_cursor"),                  public :: GLFW_CENTER_CURSOR
    integer(c_int), bind(C, name="glf90w_transparent_framebuffer"),        public :: GLFW_TRANSPARENT_FRAMEBUFFER
    integer(c_int), bind(C, name="glf90w_hovered"),                        public :: GLFW_HOVERED
    integer(c_int), bind(C, name="glf90w_focus_on_show"),                  public :: GLFW_FOCUS_ON_SHOW

    integer(c_int), bind(C, name="glf90w_mouse_passthrough"),              public :: GLFW_MOUSE_PASSTHROUGH

    integer(c_int), bind(C, name="glf90w_position_x"),                     public :: GLFW_POSITION_X
    integer(c_int), bind(C, name="glf90w_position_y"),                     public :: GLFW_POSITION_Y

    integer(c_int), bind(C, name="glf90w_red_bits"),                       public :: GLFW_RED_BITS
    integer(c_int), bind(C, name="glf90w_green_bits"),                     public :: GLFW_GREEN_BITS
    integer(c_int), bind(C, name="glf90w_blue_bits"),                      public :: GLFW_BLUE_BITS
    integer(c_int), bind(C, name="glf90w_alpha_bits"),                     public :: GLFW_ALPHA_BITS
    integer(c_int), bind(C, name="glf90w_depth_bits"),                     public :: GLFW_DEPTH_BITS
    integer(c_int), bind(C, name="glf90w_stencil_bits"),                   public :: GLFW_STENCIL_BITS
    integer(c_int), bind(C, name="glf90w_accum_red_bits"),                 public :: GLFW_ACCUM_RED_BITS
    integer(c_int), bind(C, name="glf90w_accum_green_bits"),               public :: GLFW_ACCUM_GREEN_BITS
    integer(c_int), bind(C, name="glf90w_accum_blue_bits"),                public :: GLFW_ACCUM_BLUE_BITS
    integer(c_int), bind(C, name="glf90w_accum_alpha_bits"),               public :: GLFW_ACCUM_ALPHA_BITS
    integer(c_int), bind(C, name="glf90w_aux_buffers"),                    public :: GLFW_AUX_BUFFERS
    integer(c_int), bind(C, name="glf90w_stereo"),                         public :: GLFW_STEREO
    integer(c_int), bind(C, name="glf90w_samples"),                        public :: GLFW_SAMPLES
    integer(c_int), bind(C, name="glf90w_srgb_capable"),                   public :: GLFW_SRGB_CAPABLE
    integer(c_int), bind(C, name="glf90w_refresh_rate"),                   public :: GLFW_REFRESH_RATE
    integer(c_int), bind(C, name="glf90w_doublebuffer"),                   public :: GLFW_DOUBLEBUFFER
